Full functionality with intended messaging setup

--- a/options.html
+++ b/options.html
@@ -111,7 +111,7 @@
 		<em id="saveLine" style="color: #0000FF; font-size: 25px;" hidden>Changes Saved</em><br>
 		<br>
 		<em>
-			Created by Jared Gillis<br>
+			Maintained by SeTec7<br>
 			Based on CTG Plugin by <a href="https://creativetechguy.com" target="_blank">Jason O'Neill</a><br>
 		</em>
 	</div>
