Removing/commenting all unnecessary code

--- a/options.html
+++ b/options.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>BrowserAutomationTools - Options</title>
-	<script src="jquery-3.1.1.min.js"></script>
+	<title>CTG Autoclicker - Options</title>
+	<!--<script src="jquery-3.1.1.min.js"></script>
 	<script src="util.js"></script>
-	<script src="options.js"></script>
+	<script src="options.js"></script>-->
 
 	<style>
 		.pageDiv {
@@ -43,12 +43,9 @@
 </head>
 <body style="font-size: 100%;">
 	<div style="width: 800px; margin: auto; text-align: center;">
-		<div id="installReasonInstall" hidden>
-			<strong style="font-size: 25px; color: #0000FF;">Thank you for installing BrowserAutomationTools.<br>If you have any suggestions for more plugins, contact me on my website below.</strong><br><br>
-		</div>
-		<strong style="font-size: 25px; color: #20c300;">BrowserAutomationTools <span id="version"></span> - Options</strong><br>
+		<strong style="font-size: 25px; color: #20c300;">CTG Autoclicker - Options</strong><br>
 		<br>
-		<div style="width: 800px; margin: auto;">
+		<!--<div style="width: 800px; margin: auto;">
 			<a href="#EnableDisablePlugins" class="tabs">Enable/Disable Plugins</a>
 			<a href="#KeyboardShortcuts" class="tabs">Keyboard Shortcuts</a>
 		</div>
@@ -109,7 +106,7 @@
 			</div>
 		</div>
 		<em id="saveLine" style="color: #0000FF; font-size: 25px;" hidden>Changes Saved</em><br>
-		<br>
+		<br>-->
 		<em>
 			Maintained by SeTec7<br>
 			Based on CTG Plugin by <a href="https://creativetechguy.com" target="_blank">Jason O'Neill</a><br>
