--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,7 @@
 		<tr>
 			<td colspan="2" style="text-align: center;">
 				<em>
-					Maintained by Jared Gillis<br>
+					Maintained by SeTec7<br>
 					Based on CTG Plugin by <a href="https://creativetechguy.com" target="_blank">Jason O'Neill</a><br>
 				</em>
 			</td>
