--- a/options.html
+++ b/options.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<title>CTG Autoclicker - Options</title>
-	<!--<script src="jquery-3.7.1.min.js"></script>
-	<script src="util.js"></script>
-	<script src="options.js"></script>-->
+	<!--<script src="lib/jquery-3.7.1.min.js"></script>
+	<script src="scripts/util.js"></script>
+	<script src="scripts/options.js"></script>-->
 
 	<style>
 		.pageDiv {
