--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
 <html lang="en" style="max-height: 400px; overflow-y: auto;">
 <head>
 	<title>CTG Autoclicker</title>
-	<script src="jquery-3.7.1.min.js"></script>
-	<script src="util.js"></script>
-	<script src="popup.js"></script>
+	<script src="lib/jquery-3.7.1.min.js"></script>
+	<script src="scripts/util.js"></script>
+	<script src="scripts/popup.js"></script>
 </head>
 <body style="min-width: 200px; max-height: 400px; overflow-y: auto;">
 	<table style="margin: auto;">
