--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
 	<title>CTG Autoclicker</title>
 	<script src="lib/jquery-3.7.1.min.js"></script>
-	<script src="scripts/util.js"></script>
+	<!--<script src="scripts/util.js"></script>-->
 	<script src="scripts/popup.js"></script>
 </head>
 <body style="min-width: 200px; max-height: 400px; overflow-y: auto;">
